--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vkidofdarkness.mystocks">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".StockApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.StockMarketApp">
+        android:theme="@style/Theme.MyStocks">
         <activity
             android:name="com.vkidofdarkness.mystocks.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.StockMarketApp">
+            android:theme="@style/Theme.MyStocks">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
